--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,24 @@
+import java.text.SimpleDateFormat
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
+
+static def getPassword(String passwordPath) {
+    return System.getenv(passwordPath)
+}
+
+def keystorePropertiesFile = rootProject.file("debug.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
     compileSdk 32
 
     defaultConfig {
         applicationId "com.eiffelyk.word"
-        minSdk 28
+        minSdk 29
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -16,10 +26,31 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            storeFile file(RELEASE_STOREFILE)
+            storePassword getPassword("RELEASE_KEY_PASSWORD")
+            keyPassword getPassword("RELEASE_KEY_PASSWORD")
+            keyAlias KEYALIAS
+        }
+        debug {
+            storeFile file(keystoreProperties['DEBUG_STOREFILE'])
+            storePassword keystoreProperties['DEBUG_KEYSTORE_PASSWORD']
+            keyAlias keystoreProperties['KEYALIAS']
+            keyPassword keystoreProperties['DEBUG_KEYSTORE_PASSWORD']
+        }
+    }
     buildTypes {
         release {
+            minifyEnabled true
+            zipAlignEnabled true // Zipalign优化
+            shrinkResources true  // 移除无用的resource文件
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), '../proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -32,8 +63,7 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
