--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+DEBUG_STOREFILE=../Gwen_Debug.jks
+RELEASE_STOREFILE=../Gwen_Release.jks
+#DEBUG_KEYSTORE_PASSWORD=b69a49bb05162d3b3773642b023f7f23
+KEYALIAS=mediatrack
